spacing fix

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@
 
 #vertical
 {
-    width: 90%;
+    width: auto;
     height: 130vh;
     margin-left: auto;
     margin-right: auto;
